# yorko-resume

./: .dockerignore  .gitignore  404.html  Dockerfile  README.md  docker-compose.yml  index.html  main.css  mkdocs.yml  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: build-public.yaml  deploy.yaml
LaTeXTemplates_awesome-resume-cv_v1.3/: JoshYorkoResume.tex
LaTeXTemplates_awesome-resume-cv_v1.3/cv-sections/: experience.tex  skills.tex
docs/: index.md
k8s/: app_of_apps.yaml  yorko-resume-deployment.yaml  yorko_resume-service.yaml
k8s/apps/yorko-resume-helm/: values.yaml
k8s/apps/yorko-resume-helm/templates/: yorko-resume-deployment.yaml  yorko_resume-service.yaml
search/: search_index.json
templates/awesome-resume/: JoshYorkoResume.tex  cover_letter.tex
templates/awesome-resume/cv-sections/: education.tex  experience.tex  skills.tex
templates/developer-resume/: main.aux  main.tex
yorko_resume/: main.py  serve.py
